# Blyss

./: .gitmodules  CMakeLists.txt  README.md  license.hpp
cmake/: embed.cmake  sources.cmake
cmake/lib/: cli11.cmake  gladimpl.cmake  glfw.cmake  glm.cmake  imgui.cmake  pdcurses.cmake  spdlog.cmake  stb.cmake
include/: GlfwState.hpp  curses_state.hpp  element_array_buffer.hpp  gl_error.hpp  gl_exception.hpp  glfw_state.hpp  mat_fac.hpp  matrix.hpp  mesh.hpp  shader.hpp  shader_build_exception.hpp  sprite.hpp  square.hpp  texture.hpp  texture_cache.hpp  texture_map.hpp  texture_ref.hpp  tile_grid.hpp  vertex_array_object.hpp  vertex_buffer_object.hpp
include/client/: client_player.hpp  local_client_player.hpp
include/server/: cell.hpp  i_client.hpp  i_player.hpp  map.hpp  perf_watcher.hpp  server.hpp  world.hpp
include/startup/menus/: main_menu.hpp
include/utils/curses/: curses_state.hpp  window.hpp
lib/glad/include/glad/: glad.h
lib/glad/release/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: shader.vert
src/: GlfwState.cpp  curses_state.cpp  element_array_buffer.cpp  gl_error.cpp  gl_exception.cpp  glfw_state.cpp  main.cpp  mat_fac.cpp  mesh.cpp  shader.cpp  shader_build_exception.cpp  sprite.cpp  square.cpp  texture.cpp  texture_cache.cpp  texture_map.cpp  tile_grid.cpp  vertex_array_object.cpp  vertex_buffer_object.cpp
src/client/: client_player.cpp  local_client_player.cpp
src/server/: cell.cpp  map.cpp  perf_watcher.cpp  server.cpp  world.cpp
src/startup/menus/: main_menu.cpp
src/utils/curses/: curses_state.cpp  window.cpp
